--- a/Store.Web/Views/Basket/Index.cshtml
+++ b/Store.Web/Views/Basket/Index.cshtml
@@ -1,14 +1,13 @@
-@inject IBasketService BasketService
+@model IEnumerable<Store.BusinessLogic.Models.Basket.BasketLine>
 @{
     ViewData["Title"] = "Корзинка";
-    var basketLines = await BasketService.GetBasketLinesAsync();
 }
 <div>
     <h1 class="display-4">Корзинка</h1>
 </div>
 <hr/>
 <br/>
-@if( !basketLines.ToArray().Any() )
+@if( !Model.ToArray().Any() )
 {
     <div class="text-center alert alert-danger">Пока что корзинка пуста</div>
 }
@@ -16,41 +15,48 @@ else
 {
     <table class="table table-bordered table-striped">
         <thead>
-        <tr>
-            <th>Наименование</th>
-            <th>Описание</th>
-            <th>Цена</th>
-            <th>Кол-во</th>
-            <th>Сумма</th>
-            <th></th>
+        <tr class="d-flex">
+            <th class="col-2">Наименование</th>
+            <th class="col-5">Описание</th>
+            <th class="col-1">Цена</th>
+            <th class="col-1">Кол-во</th>
+            <th class="col-1">Сумма</th>
+            <th class="col-2"></th>
         </tr>
         </thead>
         <tbody>
-        @foreach( var line in basketLines.OrderBy( x => x.Id ) )
+        @foreach( var line in Model.OrderBy( x => x.Id ) )
         {
-            <tr>
-                <td>@line.Product.Title</td>
-                <td>@line.Product.Description</td>
-                <td>@line.Product.Price руб</td>
-                <td class="text-center">
+            <tr class="d-flex">
+                <td class="col-2">@line.Product.Title</td>
+                <td class="col-5">@line.Product.Description</td>
+                <td class="col-1">@line.Product.Price руб</td>
+                <td class="text-center col-1">
                     <div>
-                        <a asp-action="Add"
-                           asp-route-productId="@line.Id"
+                        <a asp-action="ChangeCount"
+                           asp-route-productId="@line.Product.Id"
                            asp-route-count="@( line.Count + 1 )">
                             +
                         </a>
                         @line.Count
-                        <a asp-action="Add"
-                           asp-route-productId="@line.Id"
-                           asp-route-count=@( line.Count - 1 )>
-                            -
-                        </a>
+                        @if( line.Count == 1 )
+                        {
+                            <span class="isDisabled">-</span>
+                        }
+                        else
+                        {
+                            <a asp-action="ChangeCount"
+                               asp-route-productId="@line.Product.Id"
+                               asp-route-count=@( line.Count - 1 )>
+                                -
+                            </a>
+                        }
                     </div>
                 </td>
-                <td>@line.Total руб</td>
-                <td class="text-center">
+                <td class="col-1">@line.Total руб</td>
+                <td class="text-center col-2">
                     <a asp-action="Remove"
-                       asp-route-productId="@line.Id"
+                       asp-route-productId="@line.Product.Id"
                        class="btn btn-outline-danger">
                         Удалить
                     </a>
@@ -61,7 +67,7 @@ else
     </table>
 
     <div>
-        <b>Итоговая сумма: <i>@basketLines.ToArray().Select( x => x.Product.Price * x.Count ).Sum()</i> руб</b>
+        <b>Итоговая сумма: <i>@Model.ToArray().Select( x => x.Product.Price * x.Count ).Sum()</i> руб</b>
     </div>
     <br/>
     <div>
