--- a/Store.Web/Views/Home/Privacy.cshtml
+++ b/Store.Web/Views/Home/Privacy.cshtml
@@ -1,6 +1,115 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Политика конфиденциальности";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<h1 class="display-4">@ViewData["Title"]</h1>
+<hr/>
+<br/>
+<p class="lead">
+    ООО «Карантинчик», ОГРН 1234567890123 (далее — «Карантинчик») собирает персональные данные пользователей сайта https://localhost:5001 — (далее — Сайт) и берет на себя обязательства по их защите.
+    Ознакомьтесь с Политикой в области обработки и обеспечения безопасности персональных данных (далее — Политика).
+</p>
+<p class="lead">
+    Политика определяет условия и цели сбора, хранения, защиты, обработки и распространения персональных данных пользователей Сайта.
+</p>
+<p class="lead">
+    Использование Сайта означает автоматическое согласие на сбор, хранение, защиту, обработку и распространение своих персональных данных, 
+    включая их передачу третьим лицам для рассылки рекламных и информационных материалов. 
+    В случае несогласия с этими условиями пользователь должен воздержаться от использования Сайта.
+</p>
+<p class="lead">
+    Обратите внимание, что на Сайте имеются ссылки на ресурсы третьих лиц — партнеров, предлагающих свои сервисы, услуги и/или товары, и следующих своим собственным правилам обработки персональных данных. 
+    Карантинчик не несет ответственности в случае нарушения правил конфиденциальности персональных данных указанными третьими лицами.
+</p>
+<br/>
+<h2 class="text-muted">СБОР ПЕРСОНАЛЬНЫХ ДАННЫХ</h2>
+<hr/>
+<ul>
+    <li class="lead">
+        Персональные данные — это любые данные, используемые для идентификации личности. 
+        Они могут включать в себя фамилию, имя, отчество, дату рождения, место нахождения (город, область), 
+        пол, семейное положение, номер телефона, адрес электронной почты (E-mail), а также любые дополнительные данные, 
+        собираемые в ходе акций и компаний группы Карантинчик и его партнеров.
+    </li>
+    <br/>
+    <li class="lead">
+        Карантинчик собирает персональные данные, предоставленные пользователем добровольно при регистрации 
+        и заполнении профиля пользователя на Сайте, а также данные, которые пользователи и иные лица 
+        по их поручению вводят в поля сбора данных на Сайте (E-mail, имя в произвольной форме, 
+        профили в социальных сетях Facebook, VK.com, Одноклассники).
+    </li>
+    <br/>
+    <li class="lead">
+        Карантинчик также осуществляет пассивный сбор статистических данных о текущем подключении к Сайту, 
+        включая IP-адрес пользователя, провайдера пользователя, тип браузера и информацию, предоставляемую браузером, 
+        дату, время и количество посещений, адрес ресурса, с которого пользователь перешел на Сайт, сведения о просмотре рекламных баннеров.
+    </li>
+</ul>
+<br/>
+<h2 class="text-muted">ФАЙЛЫ COOKIES И ДРУГИЕ ТЕХНОЛОГИИ</h2>
+<hr/>
+<ol>
+    <li class="lead">
+        Для сбора данных на Сайте могут использоваться различные технологии, например, файлы cookies, пиксельные теги и веб-маяки. 
+        Целью этого является сбор аналитической информации в обобщенном виде, формирование рекомендаций, создание персонализированной рекламы. 
+        Пользователь может всегда отказаться от использования cookies, отправленных Сайтом, выбрав опцию «отклонить cookies» в своем браузере.
+    </li>
+    <br/>
+    <li class="lead">
+        На Сайте также могут использоваться сторонние интернет-сервисы, включая компанию Google, для сбора статистических персональных данных. 
+        Сторонние сервисы хранят полученные данные на собственных сервисах. 
+        Карантинчик не несет ответственности за локализацию серверов сторонних интернет-сервисов.
+    </li>
+</ol>
+<br/>
+<h2 class="text-muted">ИСПОЛЬЗОВАНИЕ И ОБРАБОТКА ПЕРСОНАЛЬНЫХ ДАННЫХ</h2>
+<hr/>
+<ol>
+    <li class="lead">
+        Обработка персональных данных осуществляется Издательским домом на основе и в соответствии с Пользовательским соглашением.
+    </li>
+    <br/>
+    <li class="lead">
+        Карантинчик может обрабатывать персональные данные следующим образом, если не указано другое: 
+        собирать, накапливать, хранить на серверах, расположенных на территории Российской Федерации, систематизировать, 
+        обезличивать, анализировать, удалять и передавать третьим лицам для рассылки информационных и рекламных материалов.
+    </li>
+    <br/>
+    <li class="lead">
+        Карантинчик может использовать персональные данные, чтобы связаться с пользователем, предоставившим свои персональные данные, 
+        предлагать и предоставлять ему, в том числе, свои платные сервисы, услуги и/или товары.
+    </li>
+</ol>
+<br/>
+<h2 class="text-muted">ОБНОВЛЕНИЕ ПЕРСОНАЛЬНЫХ ДАННЫХ</h2>
+<hr/>
+<p class="lead">
+    Карантинчик не проверяет достоверность предоставляемой персональной информации и не контролирует ее актуальность,
+    однако, исходит из того, что предоставленные данные являются достоверными.
+</p>
+<br/>
+<h2 class="text-muted">ПРАВА ПОЛЬЗОВАТЕЛЯ</h2>
+<hr/>
+<ol>
+    <li class="lead">
+        Карантинчик принимает на себя обязательства по сохранению конфиденциальности персональных данных пользователя. 
+        Предоставляя свои персональные данные, пользователь дает Издательскому дому не только свое полное согласие на сбор,
+        хранение, защиту, обработку и распространение предоставленных им персональных данных, но и на получение сообщений от Карантинчика, в том числе рекламного содержания.
+    </li>
+    <br/>
+    <li class="lead">
+        Согласие на сбор, хранение, защиту, обработку и распространение персональных данных пользователя действует бессрочно и может быть отозвано. 
+        Для этого пользователь должен направить соответствующее распоряжение в простой письменной форме 
+        на адрес электронной почты (E-mail) personal.data@burda.ru или на адрес Издательского дома (127018, г. Москва, ул. Полковая, д. 3, стр. 4, помещение I, комната 10) 
+        заказным почтовым отправлением. Согласие пользователя на сбор, хранение, защиту, обработку и распространение персональных данных 
+        считается отозванным через 30 дней с даты получения Карантинчиком такого уведомления от пользователя.
+    </li>
+</ol>
+
+<p class="lead">
+    Настоящая политика конфиденциальности вступает в силу с даты её утверждения генеральным директором ООО «Карантинчик», 
+    размещается на сайте Карантинчика по адресу: https://localhost:5001/Home/Privacy и действует до внесения в неё изменений. 
+    Каждая новая либо измененная версия политики конфиденциальности также размещается на сайте Карантинчика.
+</p>
+
+
