--- a/Store.Web/Views/_ViewImports.cshtml
+++ b/Store.Web/Views/_ViewImports.cshtml
@@ -7,4 +7,7 @@
 @using Store.BusinessLogic.Services.Basket
 @using Store.BusinessLogic.Services.Sale
 @using Store.BusinessLogic.Services
+@using Store.BusinessLogic.Services.Product
+@using Store.Web.Security
+@using Store.Web.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
