--- a/Store.Web/Views/Shared/_Layout.cshtml
+++ b/Store.Web/Views/Shared/_Layout.cshtml
@@ -1,8 +1,9 @@
-﻿@using Store.Web.Security
-@inject IAccountService AccountService
+﻿@inject IAccountService AccountService
 @inject IBasketService BasketService
+@inject UserIdentifierService UserIdentifierService
 @{
-    var basketLinesCount = ( await BasketService.GetBasketLinesAsync() ).Count();
+    var userId = UserIdentifierService.GetUserId( User.GetId(), TempData["id"] );
+    var salesCount = ( await BasketService.GetBasketLinesAsync( userId ) ).Count();
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -23,20 +24,23 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="nav-link text-dark" asp-controller="Product" asp-action="Index">Товары</a>
+            @if( User.IsAdmin() )
+            {
+                <a class="nav-link text-dark" asp-controller="Product" asp-action="Create">Добавить товар</a>
+            }
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav ml-auto">
                     <li>
                         <a class="nav-link text-dark" asp-controller="Home" asp-action="About">О нас</a>
                     </li>
-                    <li>
-                        <a class="nav-link text-dark" asp-controller="Basket" asp-action="Index">
-                            Корзина
-                            @if( basketLinesCount > 0 )
-                            {
-                                <span class="badge badge-pill badge-primary">@basketLinesCount</span>
-                            }
-                        </a>
-                    </li>
+                    @if( !User.IsAdmin() )
+                    {
+                        <li>
+                            <a class="nav-link text-dark" asp-controller="Basket" asp-action="Index">
+                                Корзина @if( salesCount > 0 ) { <span class="badge badge-pill badge-primary">@salesCount</span> }
+                            </a>
+                        </li>
+                    }
                     @if( ViewBag.IsAuthorized )
                     {
                         <li class="nav-item dropdown ml-auto">
@@ -65,6 +69,7 @@
     </nav>
 </header>
 <div class="container container-fluid">
+    <partial name="_CookieConsentPartial" />
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
@@ -72,12 +77,12 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; @DateTime.Now.Year - Карантинчик - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; @DateTime.Now.Year - Карантинчик - <a asp-area="" asp-controller="Home" asp-action="Privacy">Политика конфиденциальности</a>
     </div>
 </footer>
-<script src="~/lib/jquery/dist/jquery.min.js"></script>
-<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="~/js/site.js" asp-append-version=" true "></script>
+<script src="~/lib/jquery/dist/jquery.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
 @RenderSection( "Scripts", required: false )
 </body>
 </html>
