--- a/Store.Web/wwwroot/css/site.css
+++ b/Store.Web/wwwroot/css/site.css
@@ -69,3 +69,8 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.isDisabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
